--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -1,16 +1,23 @@
+@import '../../styles/blocks/mixins.scss';
+
 .projectCard {
   position: relative;
 
   border: 2px solid #ffffff;
-  //   box-shadow: 0px 4px 10px 5px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
 
-  width: 600px;
+  width: 350px;
+
   height: 361px;
 
   cursor: pointer;
 
   transition: border-color 0.5s ease;
+
+  @include onDesktop {
+    width: 600px;
+    height: 361px;
+  }
 
   &:hover {
     border: 2px solid #70ff00;
