--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -13,6 +13,7 @@
 
   .skillsListWrapper {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 54px;
     flex-wrap: wrap;
