Added contact section & connected email

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/blocks/mixins.scss';
 .about {
   margin-bottom: 50px;
-  @include onDesktop {
+  @include onSmallDesktop {
     margin-bottom: 200px;
   }
   .aboutContent {
