--- a/src/styles/blocks/mixins.scss
+++ b/src/styles/blocks/mixins.scss
@@ -4,8 +4,14 @@
   }
 }
 
-@mixin onDesktop {
+@mixin onSmallDesktop {
   @media (min-width: 1300px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1600px) {
     @content;
   }
 }
@@ -21,7 +27,7 @@
     column-gap: 24px;
   }
 
-  @include onDesktop {
+  @include onSmallDesktop {
     --columns: 12;
   }
 }
@@ -32,11 +38,28 @@
     padding-inline: 24px;
   }
 
-  @include onDesktop {
+  @include onSmallDesktop {
     // max-width: 1728px;
     padding-inline: 140px;
 
     margin-inline: auto;
+  }
+}
+
+@mixin inputStyle {
+  padding: 14px 16px;
+  font-size: 16px;
+  width: 100%;
+  line-height: 1.96rem;
+  font-weight: 400;
+  // border: 2px solid #70ff00;
+  border: none;
+  border-radius: 8px;
+  background-color: #2e2e2e;
+  color: #f2f2f2;
+
+  &:focus {
+    border: 1px solid #70ff00;
   }
 }
 
