--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,4 +2,11 @@
 @import './blocks/mixins.scss';
 @import './blocks/icons.scss';
 @import './blocks/title.scss';
+@import './blocks/input.scss';
+@import './blocks/button.scss';
 
+.slick-list {
+  & .slick-slide > div {
+    padding: 0 2px;
+  }
+}
