--- a/src/components/HeaderNav/HeaderNav.module.scss
+++ b/src/components/HeaderNav/HeaderNav.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/blocks/mixins.scss';
+
 .navigation {
   display: flex;
   gap: 50px;
@@ -5,21 +7,42 @@
 
   &[data-isOpen='true'] {
     flex-direction: column;
-
     margin-bottom: 60px;
   }
 
   .navigationItem {
     list-style: none;
+    position: relative;
 
     .navigationLink {
+      position: relative;
+      z-index: 1;
       font-weight: 700;
       font-size: 26px;
       line-height: 30px;
-
       color: #ffffff;
-
       text-decoration: none;
+
+      padding-block: 20px;
+
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: -4px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #fff;
+        transform: scaleX(1);
+        transform-origin: bottom left;
+        transition: width 0.3s ease-in-out, opacity 0.3s ease-in-out;
+        opacity: 0;
+      }
+
+      &:hover::before {
+        width: 100%;
+        opacity: 1;
+      }
     }
   }
 }
