--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/blocks/mixins.scss';
+
 .skills {
   background-color: #161616;
 
@@ -25,6 +27,8 @@
     position: relative;
     margin-bottom: 20px;
     text-align: center;
+
+    @include hover(transform, scale(1.05));
 
     .skillPhoto {
       height: 128px;
