--- a/src/styles/blocks/mixins.scss
+++ b/src/styles/blocks/mixins.scss
@@ -57,9 +57,13 @@
   border-radius: 8px;
   background-color: #2e2e2e;
   color: #f2f2f2;
+}
 
-  &:focus {
-    border: 1px solid #70ff00;
+@mixin hover($prop, $toValue) {
+  transition: #{$prop} 0.5s;
+
+  &:hover {
+    #{$prop}: $toValue;
   }
 }
 
