--- a/src/styles/blocks/mixins.scss
+++ b/src/styles/blocks/mixins.scss
@@ -39,7 +39,7 @@
   }
 
   @include onSmallDesktop {
-    // max-width: 1728px;
+    max-width: 1728px;
     padding-inline: 140px;
 
     margin-inline: auto;
